Closed
Bug 1269080
Opened 10 years ago
Closed 10 years ago
"ASSERTION: the given url scheme contains invalid characters"
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: jruderman, Assigned: valentin)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase, Whiteboard: [necko-active])
Attachments
(2 files)
|
107 bytes,
text/html
|
Details | |
|
1017 bytes,
patch
|
mcmanus
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: the given url scheme contains invalid characters: 'Error', file netwerk/base/nsSimpleURI.cpp, line 239
There are two instances of this in the codebase. One of them was converted to a warning (bug 326625), but this one is still an assertion and can still be triggered. Should this one also just be converted to a warning?
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → valentin.gosu
Whiteboard: [necko-active]
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8747438 -
Flags: review?(mcmanus)
Updated•10 years ago
|
Attachment #8747438 -
Flags: review?(mcmanus) → review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 3•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•